--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
           <div class="row pt-1">
 
             <!-- media item -->
-            <figure class="media-item col-md-5 pr-2 lazyload">
+            <figure class="media-item col-md-5 pr-4 lazyload">
               <picture>            
                 <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
                 <noscript>
@@ -121,7 +121,7 @@
             </figure>
 
             <!-- list -->
-            <ul class="col-md-7">
+            <ul class="list-styled col-md-7">
               <p id="culture-and-values" class="h2 list-title">Culture &amp; Values</p>
               <li>Customers at heart – Serve our Customer smarter and quicker</li>
               <li>Sharper and more powerful Digital offerings</li>
@@ -164,12 +164,12 @@
 
           <h2 id="concordus-team" class="border-title">Concordus Team</h2>
 
-          <blockquote class="blockquote">
+          <blockquote class="blockquote mb-4">
             <p class="h5 mb-0">We are a team of Technology lovers that have significant experience in different technologies, software methodologies and industry domains viz. Telecommunications, Government, Financials (Banking, Finance and Insurance) etc.</p>
             <footer class="blockquote-footer hidden">Someone famous in <cite title="Source Title">Source Title</cite></footer>
           </blockquote>
 
-          <p class="lead mb-2">Here's a summary of the experience some of our key resources have:</p>
+          <p class="lead mb-4 align-center">Here's a summary of the experience some of our key resources have:</p>
 
           <!-- list group -->
           <div class="row mr-ml-a mb-2">
