--- a/advanced-testing.html
+++ b/advanced-testing.html
@@ -11,7 +11,7 @@
   <!--[if IEMobile]><meta http-equiv="cleartype" content="on" /><![endif]-->
   <link rel="apple-touch-icon" href="images/icons/favicon-180.jpg">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>Concordus Applications</title>
+  <title>Concordus Applications | Advanced Testing</title>
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles -->
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="main-menu">
             <ul class="navbar-nav ml-a">
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About<!--<span class="sr-only">(current)</span>--></a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="services.html" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true"
@@ -58,8 +58,8 @@
                   <a class="dropdown-item" href="sentiment-analysis.html">Sentiment Analysis</a>
                 </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="advanced-testing.html">Testing</a>
+              <li class="nav-item active">
+                <a class="nav-link" href="advanced-testing.html">Testing<span class="sr-only">(current)</span></a>
               </li>
               <!--<li class="nav-item">
                 <a class="nav-link" href="concordus-customers.html">Customers</a>
@@ -82,9 +82,7 @@
       <nav class="breadcrumb">
         <div class="container">
           <a class="breadcrumb-item" href="index.html">Home</a>
-          <a class="breadcrumb-item" href="#">Services</a>
-          <a class="breadcrumb-item" href="#">Software as a Service</a>
-          <span class="breadcrumb-item active">Current Page</span>
+          <span class="breadcrumb-item active">Testing</span>
         </div>
       </nav>
 
@@ -93,23 +91,9 @@
         <div class="container">
           <h1>Master Content Page</h1>
           <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
-          <!--<a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
           <div class="btn-group">
             <a href="#page-start" class="btn btn-lg btn-round btn-secondary" data-scroll>Learn More</a>
-            <a href="#page-start" class="btn btn-lg btn-round btn-primary" data-scroll>Get Started</a>
-          </div>
-        </div>
-      </section>
-
-      <!-- masthead (dark) -->
-      <section class="masthead bg-full theme-black">
-        <div class="container">
-          <h1>Master Content Page</h1>
-          <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
-          <!--<a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
-          <div class="btn-group">
-            <a href="#page-start" class="btn btn-lg btn-round btn-secondary" data-scroll>Learn More</a>
-            <a href="#page-start" class="btn btn-lg btn-round btn-primary" data-scroll>Get Started</a>
+            <a href="contact.html" class="btn btn-brand">Get Started</a>
           </div>
         </div>
       </section>
