--- a/sentiment-analysis.html
+++ b/sentiment-analysis.html
@@ -96,7 +96,7 @@
           <!--<a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
           <div class="btn-group">
             <a href="#page-start" class="btn btn-lg btn-round btn-secondary" data-scroll>Learn More</a>
-            <a href="#page-start" class="btn btn-lg btn-round btn-primary" data-scroll>Get Started</a>
+            <a href="contact.html" class="btn btn-brand">Get Started</a>
           </div>
         </div>
       </section>
@@ -109,7 +109,7 @@
           <!--<a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Learn More <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
           <div class="btn-group">
             <a href="#page-start" class="btn btn-lg btn-round btn-secondary" data-scroll>Learn More</a>
-            <a href="#page-start" class="btn btn-lg btn-round btn-primary" data-scroll>Get Started</a>
+            <a href="contact.html" class="btn btn-brand">Get Started</a>
           </div>
         </div>
       </section>
