--- a/360-degree-view.html
+++ b/360-degree-view.html
@@ -82,7 +82,7 @@
       <nav class="breadcrumb">
         <div class="container">
           <a class="breadcrumb-item" href="index.html">Home</a>
-          <span class="breadcrumb-item active">Sentiment Analysis</span>
+          <span class="breadcrumb-item active">360-Degree view of the Customer</span>
         </div>
       </nav>
 
@@ -118,7 +118,7 @@
 
             <p>The process of in-depth customer analysis is often referred to as a 360-degree customer view. The name speaks for itself, referring to the importance of learning everything you can about customers, such as their purchasing patterns or social media presence. Fortunately, in the era of big data, this has become much easier. Analysts have access to many more sources of information, like social media, mobile data, and sensor data via connected devices making up the Internet of Things, all of which provide clearer insights into customer behavior. Not to mention, improvements in computing technology mean we can analyze larger data sets in real-time, and the rise of big data in the cloud solutions has made big data analytics accessible to people who are notdata scientists.</p>
 
-            <p class="clearfix w-100">&nbsp;</p>
+            <p class="clearfix mb-0 w-100">&nbsp;</p>
 
             <p>With the help of big data, analysts can use data sources like social media, mobile data, click stream data or purchase history to gain a 360-degree view of their customer. This will help answer important questions, such as:</p>
 
@@ -132,6 +132,17 @@
             <h2 id="micro-segmentation" class="h3 pt-1">Micro-segmentation for Refined Targeting</h2>
 
             <p>Armed with this type of information, businesses will not only understand how customers make decisions, but allow marketers to divide markets into smaller groups. This process is called micro-segmentation, which is a more granular form of segmentation that usually separates potential customers per the demographics or psychographics. More refined segmentation allows marketers to create more targeted and effective ads and messaging.</p>
+
+            <!-- media item (left) -->
+            <figure class="media-item float-r mw-25em lazyload">
+              <picture>            
+                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <noscript>
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                </noscript>
+              </picture>
+              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+            </figure>
 
             <h2 id="enhance-customer-experience" class="h3 pt-1">Sentiment Analysis to Enhance the Customer Experience</h2>
 
