--- a/analytics.html
+++ b/analytics.html
@@ -112,7 +112,7 @@
 
             <div class="align-center mb-4 pt-3">
 
-              <h2 id="use-cases" class="text-xl">Some popular Use Cases</h2>
+              <h2 id="use-cases" class="text-xl">Some Popular Use Cases</h2>
 
             </div>
 
