--- a/business-in-a-box.html
+++ b/business-in-a-box.html
@@ -107,7 +107,7 @@
 
             <h2 id="subscription-based-saas" class="pt-2">Subscription-based SaaS Solution for Digital Transformation</h2>
             
-            <p class="lead">Demand for Software as a Service (SaaS) is accelerating and is currently five times (5X) the demand for on premise applications. Vice President Distinguished Analyst at Gartner, Tiffany Bova, in a recent Harvard Business Review article "Solving the Seller's Dilemma" states that "All companies are going to become digital companies".</p>
+            <p>Demand for Software as a Service (SaaS) is accelerating and is currently five times (5X) the demand for on premise applications. Vice President Distinguished Analyst at Gartner, Tiffany Bova, in a recent Harvard Business Review article "Solving the Seller's Dilemma" states that "All companies are going to become digital companies".</p>
 
             <!-- media item (left) -->
             <figure class="media-item circle-mask-md mask-outside float-l lazyload">
