--- a/enterprise-mobile-crm.html
+++ b/enterprise-mobile-crm.html
@@ -100,7 +100,7 @@
             </figure>
             
             <!-- Page Title -->
-            <h1 id="business-in-a-box" class="display-4">Enterprise Mobile Crm</h1>
+            <h1 id="enterprise-mobile-crm" class="display-4">Enterprise Mobile Crm</h1>
             
             <p class="lead">We offer an Enterprise Mobile CRM for subscription. Our CRM is built to mobilize your whole employee workforce including those employees who travel outside the office boundary.</p>
 
@@ -136,7 +136,7 @@
               </picture>
             </figure>
 
-            <h2 id="sales-and-target" class="pt-2">Attendance &amp; Leave</h2>
+            <h2 id="attendance-and-leave" class="pt-2">Attendance &amp; Leave</h2>
 
             <!-- media item (right) -->
             <figure class="media-item mw-25em float-r lazyload">
