--- a/real-time-analytics.html
+++ b/real-time-analytics.html
@@ -65,10 +65,10 @@
                 <a class="nav-link" href="concordus-customers.html">Customers</a>
               </li>-->
               <li class="nav-item">
-                <a class="nav-link" href="contact.html"  data-toggle="modal" data-target="#contact-modal">Contact</a>
+                <a class="nav-link" href="contact.html" data-toggle="modal" data-target="#contact-modal">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="demo.html">Demo</a>
+                <a class="nav-link" href="demo.html" data-toggle="modal" data-target="#demo-modal">Demo</a>
               </li>
             </ul>
           </div>
@@ -147,13 +147,13 @@
 
 <!-- Contact modal -->
 <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
   <div class="modal-dialog mw-48em" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h2 class="modal-title h5 mb-0" id="contact-modal">Get in touch</h2>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
       <div class="modal-body">
         <form id="" action="post">
@@ -186,6 +186,25 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Demo modal -->
+<div class="modal modal-clean fade" id="demo-modal" tabindex="-1" role="dialog" aria-labelledby="demo-modal-label" aria-hidden="true">
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title h5 mb-0 sr-only" id="demo-modal">Concordus Video Demo</h2>
+      </div>
+      <div class="modal-body">
+        <div class="media-wrap">
+          <iframe width="100%" src="//www.youtube.com/embed/nQhyHO3asNE" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </div>
