contact page design

--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,7 @@
       <section class="masthead bg-full bg-hero-user theme-black">
         <div class="container">
           <h1>Get In Touch</h1>
-          <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and
-            Enterprises.</p>
+          <p class="lead">Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
           <a href="#page-start" class="btn btn-lg btn-round btn-outline pr-tiny" data-scroll>Contact Us <svg class="icon icon-outline rotate-90"><use xlink:href="#icon-chevron-sm" /></svg></a>
         </div>
       </section>
@@ -128,15 +127,16 @@
                   <textarea class="form-control" name="message" placeholder="Message" rows="12" required=""></textarea>
                 </div>
               </div>
+              <div class="col-md-12 mb-4">
+                <p class="mr-ml-a mb-0 mw-48em align-center">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
+              </div>
               <div class="col-md-12">
-                <div class="text-center">
+                <div class="align-center">
                   <input class="btn btn-brand btn-xl" type="submit" value="Send Request">
                 </div>
               </div>
             </div>
           </form>
-
-          <p class="lead">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions.Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
 
         </div>
       </section>
