removed "contact" modal, linked to contact.html

--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -65,7 +65,8 @@
                 <a class="nav-link" href="concordus-customers.html">Customers</a>
               </li>-->
               <li class="nav-item">
-                <a class="nav-link" href="contact.html" data-toggle="modal" data-target="#contact-modal">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
+                <!--<a class="nav-link" href="contact.html" data-toggle="modal" data-target="#contact-modal">-->
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="demo.html" data-toggle="modal" data-target="#demo-modal">Demo</a>
