--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 <a class="nav-link" href="concordus-customers.html">Customers</a>
               </li>-->
               <li class="nav-item active">
-                <a class="nav-link" href="contact.html" data-toggle="modal" data-target="#contact-modal">Contact<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="demo.html" data-toggle="modal" data-target="#demo-modal">Demo</a>
