--- a/advanced-testing.html
+++ b/advanced-testing.html
@@ -111,9 +111,10 @@
             <div class="row pt-2">
 
               <!-- media item -->
-              <figure class="media-item col-md-3 pr-2 lazyload">
-                <picture>            
-                  <img src="images/content/img-content-testing.jpg" data-src="images/content/img-content-testing.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+              <figure class="media-item col-md-4 pr-2 lazyload">
+                <picture>
+                  <source media="(min-width: 48em)" srcset="images/content/img-content-testing.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
                   <noscript>
                     <img src="images/content/img-content-testing-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
                   </noscript>
@@ -121,7 +122,7 @@
               </figure>
 
               <!-- list -->
-              <ul class="list-styled col-md-9 pl-2">
+              <ul class="list-styled col-md-8 pl-2">
                 <p class="h2 list-title">Key Challenges</p>
                 <li>Testing for ever-changing environments</li>
                 <li>Testing for a huge range of Devices, Browsers, Environments</li>
@@ -137,7 +138,7 @@
 
             </div>
 
-            <div class="align-center mb-2 pt-1">
+            <div class="align-center pt-pb-3">
 
               <h2 id="solutions" class="text-xl">Solutions</h2>
             
@@ -180,7 +181,7 @@
 
             </div>
 
-            <div class="align-center mb-4 pt-1">
+            <div class="align-center pt-pb-5">
 
               <h2 id="offerings" class="text-xl">Offerings</h2>
               
@@ -209,7 +210,8 @@
                     <!-- copy -->
                     <div class="card-block">
                       <h4 class="card-title">Digital Testing</h4>
-                      <p class="card-text">Concordus Applications has proven capabilities in each of the following types of testing:</p>
+                      <p class="card-text">Concordus Applications has proven capabilities in many types of testing. Concordus Applications helps companies rethink and reinvent their testing approach by reducing risk and costs while delivering continuous quality efficiently.</p>
+                      <p>We manage the end-to-end Testing process and keep the focus on delivering the best value.</p>
                       <!--<a href="#" class="btn btn-round btn-primary">Read More</a>-->
                     </div>
                   </div>
