master footer layout & design

--- a/MASTER.html
+++ b/MASTER.html
@@ -94,9 +94,82 @@
 
     <footer class="site-footer" role="contentinfo">
       <div class="container">
-        <p>&copy; 2017 Concordus Applications</p>
-        <nav><a href="#0">Contact us</a> &bull; <a href="#0">Help center</a></nav>
+    <!-- logo & search -->
+    <section class="flex flex-wrap ai-center jc-between">
+      <a class="logo" href="#main">
+        <img src="images/concordus-logo-white-h.svg" alt="Concordus Applications logo">
+      </a>
+      <div class="search" role="search">
+        <form id="footer-search" class="form-trans flex jc-between">
+          <label for="company" class="sr-only">search</label>
+          <input type="text" class="form-control" id="company" placeholder="search">
+          <button class="btn btn-sm btn-default" type="submit"><svg class="icon"><use xlink:href="#icon-search" /></svg></button>
+        </form>
       </div>
+    </section>
+    <!-- footer nav -->
+    <section class="footer-nav">
+      <!-- nav list -->
+      <nav class="nav-list" aria-labelledby="company-information">
+        <h3 id="company-information" class="nav-title">Company</h3>
+        <ul>
+          <li><a href="#0">About</a></li>
+          <li><a href="#0">Partners</a></li>
+          <li><a href="#0">Careers</a></li>
+          <li><a href="#0">News</a></li>
+        </ul>
+      </nav>
+      <!-- nav list -->
+      <nav class="nav-list" aria-labelledby="company-products">
+        <h3 id="company-products" class="nav-title">Products</h3>
+        <ul>
+          <li><a href="#0">Features</a></li>
+          <li><a href="#0">Pricing</a></li>
+          <li><a href="#0">Terms</a></li>
+          <li><a href="#0">Collaboration</a></li>
+        </ul>
+      </nav>
+      <!-- nav list -->
+      <nav class="nav-list" aria-labelledby="product-support">
+        <h3 id="product-support" class="nav-title">Support</h3>
+        <ul>
+          <li><a href="#0">Documentation</a></li>
+          <li><a href="#0">FAQ</a></li>
+          <li><a href="#0">Resources</a></li>
+          <li><a href="#0">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- nav list -->
+      <nav class="nav-list" aria-labelledby="company-members">
+        <h3 id="company-members" class="nav-title">Members</h3>
+        <ul>
+          <li><a href="#0">Portal</a></li>
+          <li><a href="#0">Teams</a></li>
+          <li><a href="#0">Training</a></li>
+          <li><a href="#0">Login</a></li>
+        </ul>
+      </nav>
+    </section>
+    <!-- footer contact -->
+    <section class="footer-contact flex flex-wrap ai-center jc-between">
+      <div class="contact-info">
+        <h4 class="text-md">Contact Us</h4>
+        <div class="contact-nav text-sm">
+          <a href="tel:8005557654">800.555.7654</a>
+          <a href="mailto:contact@maxcentive.com">contact@concordusapps.com</a>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="soc-media-icons flex text-lg">
+          <a href="#0"><svg class="icon"><use xlink:href="#icon-facebook-circle" /></svg></a>
+          <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg></a>
+          <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg></a>
+        </div>
+        <p class="mb-0 text-sm">&copy; 2017 Concordus Applications. All rights reserved.</p>
+      </div>
+
+    </section>
+  </div>
     </footer>
 
   </div>
