footer content changes

--- a/MASTER.html
+++ b/MASTER.html
@@ -113,40 +113,52 @@
       <nav class="nav-list" aria-labelledby="company-information">
         <h3 id="company-information" class="nav-title">Company</h3>
         <ul>
-          <li><a href="#0">About</a></li>
-          <li><a href="#0">Partners</a></li>
-          <li><a href="#0">Careers</a></li>
-          <li><a href="#0">News</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="#0">Our Partners</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="#0">Concordus News</a></li>
         </ul>
       </nav>
       <!-- nav list -->
       <nav class="nav-list" aria-labelledby="company-products">
-        <h3 id="company-products" class="nav-title">Products</h3>
+        <h3 class="nav-title"><a href="services.html">Services</a></h3>
         <ul>
-          <li><a href="#0">Features</a></li>
-          <li><a href="#0">Pricing</a></li>
-          <li><a href="#0">Terms</a></li>
-          <li><a href="#0">Collaboration</a></li>
+          <li><a href="subscription-services.html">Subscription Services</a></li>
+          <li><a href="iaas.html">Integration as a Service</a></li>
+          <li><a href="enterprise-mobile-crm.html">Enterprise Mobile CRM</a></li>
+          <!--<li><a href="offerings.html">Offerings</a></li>-->
+         <li><a href="oproduct-technologies.html">Product Technologies</a></li>
+           
+        </ul>
+      </nav>      
+      <!-- nav list -->
+      <nav class="nav-list" aria-labelledby="company-members">
+        <h3 id="company-members" class="nav-title"><a href="analytics.html">Analytics</a></h3>
+        <ul>
+          <li><a href="360-degree-view.html">360-Degree view</a></li>
+          <li><a href="data-analysis.html">Big Data Analysis</a></li>
+          <li><a href="real-time-analytics.html">Real-Time Analytics</a></li>
+          <li><a href="sentiment-analysis.html">Sentiment Analysis</a></li>
+        </ul>
+      </nav>
+      <!-- nav list -->
+      <nav class="nav-list" aria-labelledby="company-members">
+        <h3 id="company-members" class="nav-title"><a href="advanced-testing.html">Testing</a></h3>
+        <ul>
+          <li><a href="#0">Digital Testing</a></li>
+          <li><a href="#0">Regression Testing</a></li>
+          <li><a href="#0">Mobile Application Testing</a></li>
+          <li><a href="#0">Enterprise Testing</a></li>
         </ul>
       </nav>
       <!-- nav list -->
       <nav class="nav-list" aria-labelledby="product-support">
         <h3 id="product-support" class="nav-title">Support</h3>
         <ul>
-          <li><a href="#0">Documentation</a></li>
-          <li><a href="#0">FAQ</a></li>
-          <li><a href="#0">Resources</a></li>
-          <li><a href="#0">Contact</a></li>
-        </ul>
-      </nav>
-      <!-- nav list -->
-      <nav class="nav-list" aria-labelledby="company-members">
-        <h3 id="company-members" class="nav-title">Members</h3>
-        <ul>
-          <li><a href="#0">Portal</a></li>
-          <li><a href="#0">Teams</a></li>
-          <li><a href="#0">Training</a></li>
-          <li><a href="#0">Login</a></li>
+          <li><a href="#0">Help Center</a></li>
+          <li><a href="#0">Schedule Demo</a></li>
+          <li><a href="#0">Training Resources</a></li>
+          <li><a href="#0">Terms &amp; Conditions</a></li>
         </ul>
       </nav>
     </section>
