--- a/MASTER.html
+++ b/MASTER.html
@@ -111,7 +111,7 @@
         <section class="footer-nav">
           <!-- nav list -->
           <nav class="nav-list" aria-labelledby="company-information">
-            <h3 id="company-information" class="nav-title">Company</h3>
+            <h3 id="company-information" class="nav-title"><a href="about.html">Company</a></h3>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="#0">Our Partners</a></li>
