home page banner styles

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </section>
 
       <!-- CTA banner -->
-      <section class="banner banner-full">
+      <section class="banner banner-full theme-dark-green bg-half-globe-left">
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
