home pgae banner styling

--- a/index.html
+++ b/index.html
@@ -159,21 +159,21 @@
       </section>
 
       <!-- CTA banner -->
-      <section class="banner banner-full">
+      <section class="banner banner-full theme-blue">
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-analytics.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
-                <img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.png" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
+                <img src="images/content/img-content-app-user-01-wide.png" data-src="images/content/img-content-app-user-01-wide.png" class="lazyload" alt="Illustration of analytical icons. Vector art.">
                 <noscript>
                   <img src="images/content/img-content-analytics-1x1.jpg" alt="Illustration of analytical icons. Vector art.">
                 </noscript>
               </picture>
             </figure>
             <div class="card-block">
-              <h2 id="custom-analytics" class="card-title">Custom Analytics</h2>
+              <h2 id="analytic-tools" class="card-title">Analytic Tools</h2>
               <p class="card-text">Our technology and service transforms the way our customers make decisions. We combine data, technology and analytics to give our customers a competitive edge and help customers rethink and reinvent their strategy by understanding their business data.</p>
               <a href="#" class="btn btn-lg btn-text">Browse sample reports <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
