banner styles, img optimization

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </section>
 
       <!-- CTA banner -->
-      <section class="banner banner-full theme-dark-green bg-half-globe-left">
+      <section class="banner banner-full theme-dark-green">
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-row-rev card-clean">
@@ -126,7 +126,7 @@
                 </noscript>
               </picture>
             </figure>
-            <div class="card-block">
+            <div class="card-block bg-half-globe-left">
               <h2 id="integration-services" class="card-title">Integration Services</h2>
               <p class="card-text">Our team has deep understanding and capability in designing solutions ground up to take advantage of cloud’s extreme elasticity and physical availability across multiple geographies.</p>
               <a href="#" class="btn btn-lg btn-text">Meet the team <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
@@ -165,14 +165,14 @@
           <div class="card card-row card-row-rev card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.png" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
-                <img src="images/content/img-content-app-user-01-wide.png" data-src="images/content/img-content-app-user-01-wide.png" class="lazyload" alt="Illustration of analytical icons. Vector art.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
+                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Illustration of analytical icons. Vector art.">
+                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="Illustration of analytical icons. Vector art.">
                 </noscript>
               </picture>
             </figure>
-            <div class="card-block">
+            <div class="card-block bg-analytics">
               <h2 id="analytic-tools" class="card-title">Analytic Tools</h2>
               <p class="card-text">Our technology and service transforms the way our customers make decisions. We combine data, technology and analytics to give our customers a competitive edge and help customers rethink and reinvent their strategy by understanding their business data.</p>
               <a href="#" class="btn btn-lg btn-text">Browse sample reports <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
