--- a/MASTER.html
+++ b/MASTER.html
@@ -26,9 +26,9 @@
       <nav class="navbar navbar-inverse navbar-toggleable-md main-menu" role="navigation">
         <div class="container">
           <a class="navbar-brand" href="index.html"><img src="images/concordus-logo-white-h.svg" alt="Concordus Applications" /></a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu"
-            aria-expanded="false" aria-label="Toggle navigation"><svg class="icon"><use xlink:href="#icon-menu" /></svg><!--<span>Menu</span>-->
-        </button>
+          <button class="navbar-toggler navbar-toggler-right toggle-button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="nav-icon c-white"><span><svg class="icon icon-menu"><use xlink:href="#icon-menu" /></svg></span></div>
+          </button>
 
           <div class="collapse navbar-collapse" id="main-menu">
             <ul class="navbar-nav ml-a">
