--- a/about.html
+++ b/about.html
@@ -568,7 +568,7 @@
           <div class="row mr-ml-a mb-2">
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a">
+            <ul class="col-sm-6 mr-ml-a mb-3">
               <p id="BSS/OSS-team" class="h4 list-title">BSS/OSS Team</p>
               <li>Program Managers</li>
               <li>Enterprise Architect</li>
@@ -580,7 +580,7 @@
             </ul>
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a">
+            <ul class="col-sm-6 mr-ml-a mb-3">
               <p id="testing-team" class="h4 list-title">Testing Team:</p>
               <li><strong class="Montserrat">Test Manager</strong> With 15 years of international experience of the Test delivery of up to $70 million programs across various organizations in the US, India, China, Australia and New Zealand.</li>
               <li><strong class="Montserrat">Test Leads</strong> This is a group of Test leaders who manage team of Test analysts and lead the planning of Test strategy and Test cases.</li>
@@ -590,10 +590,10 @@
           </div>
 
           <!-- list group -->
-          <div class="row mr-ml-a mb-2">
+          <div class="row mr-ml-a mb-2 mb-3">
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a pr-4">
+            <ul class="col-sm-6 mr-ml-a mb-3 pr-4">
               <p id="integration-team" class="h4 list-title">Integration Team</p>
               <li><strong class="Montserrat">Integration Manager:</strong> 20+ years' experience in design, development, solution and management of integration solutions. Has a long history of delivering successful integration projects over the years across different roles, technologies, industries and development methodologies.</li>
               <li><strong class="Montserrat">Integration Architect:</strong> With 15+ Years of experience in Integration Architecture, the Concordus Architect is an invaluable asset for our team and our Customers. He has integrated mainframe systems, Enterprise systems built on Java or .Net technologies and covering modules like the CRM, Customer Portals, Billing, ERP etc. His skills include a range of popular SOA platforms and web services architectures. In most Concordus projects, the Integration Architect gets involved from the concept stage and remains engaged all the way through to implementation and post implementation support.</li>
@@ -602,8 +602,8 @@
             </ul>
 
             <!-- list -->
-            <ul class="col-sm-6 mr-ml-a">
-              <p id="analytics-team" class="h4 list-title">Analytics Team::</p>
+            <ul class="col-sm-6 mr-ml-a mb-3">
+              <p id="analytics-team" class="h4 list-title">Analytics Team</p>
               <li><strong class="Montserrat">Data Scientists</strong> We have a team of highly-qualified and proficient Data scientists on our team. These resources are experts in the use of Data Analytics, Data Mining with descriptive inferential statistics and predictive analytics.</li>
               <li><strong class="Montserrat">Data Mining Engineers</strong> Our Data Mining engineers are highly experienced Data mining rock stars that are conversant with the concepts, tools and methodology of this line.</li>
               <li><strong class="Montserrat">Data Analysts</strong> Our Data Analysts have a passion for understanding data and extracting the hidden gems from it with a view to deliver to the Customer's business objectives.</li>
